[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanguard-security"
version = "0.1.0"
description = "Advanced supply chain security toolkit for detecting homograph attacks, pipeline tampering, and suspicious packages"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "AppSec Team", email = "security@example.com"},
]
license = {text = "MIT"}
keywords = ["security", "supply-chain", "ast", "ci-cd", "package-analysis"]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.0.280",
]

[project.scripts]
vanguard = "vanguard.cli:main"

[tool.setuptools]
packages = ["vanguard"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "UP", "SIM", "PT"]
ignore = ["E501"]  # Line too long (Black handles this)

[tool.ruff.isort]
known-first-party = ["vanguard"]
